# machwave

./: .eslintrc  .gitignore  Dockerfile  Makefile  README.md  SRM Solver.py  SRM-Solver-App.py  SRM-Solver-Dash.py  SRM-Solver-Lite.py  SRM-Solver-Streamlit.py  SRM-Solver-UI.py  SRM-Solver-v2.py  SRM-Solver.py  docker-compose-test.yaml  pyproject.toml  requirements.txt  requirements.txt.txt  scatter.html  temp-plot.html
Beta versions/: SRM-Solver-App_VARIABLE_CORES.py  SRM-Solver-Beta.py
UI/: SRM Solver UI.py  SRM Solver.ui  SRM-Solver-UI.py  SRM-Solver.ui  SRMSolverDash.py  UI.py  functions_UI.py
Version 1.0 files/: SRM-Solver-v1.py
core/: SRM-Solver.py
docs/: conf.py  index.rst
examples/: 3km_rocket.py  apcp_motor.py  concorde_montecarlo.py  grain_geometries.py  olympus.py
frontend/: next.config.js  package-lock.json  package.json
functions/: Ballistics.py  InternalBallistics.py  MotorStructure.py  Simulation.py  functions.py  ib_functions.py  plot_functions.py  propellant.py  structural_functions.py
output/: 5KBOOSTER.csv  5KBOOSTER.eng  SRM5K.csv  SRM5K.eng  SRM5K_input.csv  SUPERNOVA.csv  motor_data.csv  motor_data.eng  motor_input.csv  motordata.csv  motordata.eng  srm_results.txt
rocketsolver/: analytics.py  main.py  montecarlo.py
scripts/: sphinx-docs.sh
srm_solver/: SRM-Solver.py  analytics.py  main.py  montecarlo.py  motor_input.json  requirements.txt
srm_solver_app/: manage.py
srm_solver_web/: db.sqlite3  manage.py
streamlit_heroku-files/: Procfile
unused_files/: SRM-Solver-App.py  SRM-Solver-Lite.py
web/: Dockerfile  manage.py
(+418 files in other folders)
